// Copyright 2021 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.cros.platform;

option go_package = "chromiumos/tast/services/cros/platform";

// PerfettoTraceBasedMetricsService provides RPC methods to the
// platform.PerfettoTraceBasedMetricsService remote test.
service PerfettoTraceBasedMetricsService {
  // Use perfetto to generate trace and send back to the host.
  rpc GeneratePerfettoTrace(GeneratePerfettoTraceRequest)
      returns (stream GeneratePerfettoTraceResponse) {}
}

message GeneratePerfettoTraceRequest {
  string config = 1;
}

message GeneratePerfettoTraceResponse {
  bytes result = 1;
}
